# azure-devops-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.cortex/: INSTRUCTIONS.md
.github/workflows/: ci.yml
src/azure_devops_mcp/: __init__.py  __main__.py  auth.py  server.py
src/azure_devops_mcp/clients/: boards.py  git.py  pipelines.py  releases.py  tests.py  wiki.py
tests/: conftest.py  test_auth.py  test_clients.py  test_server.py
